reverted changes for latest_address_balance. This will be done in another ticket